created the base.html file

--- a/photo/templates/all-photos/base.html
+++ b/photo/templates/all-photos/base.html
@@ -1,4 +1,4 @@
-<!-- {% load bootstrap3 %}
+{% load bootstrap3 %}
 {% load static%}
 
 <!DOCTYPE html>
@@ -13,26 +13,26 @@
 
     {% block styles %}
       {% bootstrap_css %}
-      <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Spicy+Rice" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet">
+      <!-- <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Spicy+Rice" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Spicy+Rice" rel="stylesheet"> -->
       <link rel="stylesheet" href="{% static 'css/basephotos.css' %}">
     {% endblock %}
 
   </head>
   <body>
-    {% include "navbar.html" %}
+    <!-- {% include "navbar.html" %} -->
 
-    {% block content %}
+    <!-- {% block content %}
     <h1 class="text-center" > photo for today {{date|date:"d-F Y"}}</h1>
     <hr>
-    {% endblock%}
+    {% endblock%} -->
 
-    {% block scripts %}
+    <!-- {% block scripts %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %}
-    {% endblock %}
+    {% endblock %} -->
 
 
 
   </body>
-</html> -->
+</html>
