added the navbar to the base.html file

--- a/photo/templates/all-photos/base.html
+++ b/photo/templates/all-photos/base.html
@@ -20,7 +20,7 @@
 
   </head>
   <body>
-    <!-- {% include "navbar.html" %} -->
+    {% include "navbar.html" %}
 
     <!-- {% block content %}
     <h1 class="text-center" > photo for today {{date|date:"d-F Y"}}</h1>
