--- a/photo/templates/all-photos/base.html
+++ b/photo/templates/all-photos/base.html
@@ -27,10 +27,10 @@
     <hr>
     {% endblock%} -->
 
-    <!-- {% block scripts %}
+    {% block scripts %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %}
-    {% endblock %} -->
+    {% endblock %}
 
 
 
