--- a/photo/templates/all-photos/base.html
+++ b/photo/templates/all-photos/base.html
@@ -22,10 +22,10 @@
   <body>
     {% include "navbar.html" %}
 
-    <!-- {% block content %}
+    {% block content %}
     <h1 class="text-center" > photo for today {{date|date:"d-F Y"}}</h1>
     <hr>
-    {% endblock%} -->
+    {% endblock%}
 
     {% block scripts %}
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
