added the extend of base.html to today-photo.html

--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -1,9 +1,9 @@
-<!-- {%extends 'all-photos/base.html'%}
+{%extends 'all-photos/base.html'%}
 
 {% block content %}
 {{block.super}}
 
-<div class="container">
+<!-- <div class="container">
 
 
 
@@ -31,7 +31,7 @@
   {% endfor %}
 </div>
 
-</div>
+</div> -->
 
 
-{% endblock %} -->
+{% endblock %}
