--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -3,7 +3,7 @@
 {% block content %}
 {{block.super}}
 
-<!-- <div class="container">
+<div class="container">
 
 
 
@@ -14,7 +14,7 @@
     {% if photo_item.image %}
     <div class="col-md-4">
       <img src="{{photo_item.image.url}}" class="img-responsive" alt="Image">
-      <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
+      <!-- <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
 
     </div>
     {% else %}
@@ -28,10 +28,10 @@
   <div class="row">
     <h2 class="text-center">There No Photo Items</h2>
   </div>
-  {% endfor %}
+  {% endfor %} -->
 </div>
 
-</div> -->
+</div>
 
 
 {% endblock %}
