--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -14,9 +14,9 @@
     {% if photo_item.image %}
     <div class="col-md-4">
       <img src="{{photo_item.image.url}}" class="img-responsive" alt="Image">
-      <!-- <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
+      <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
 
-    </div>
+    <!-- </div>
     {% else %}
     <div class="col-md-4">
       <img src="https://banner2.kisspng.com/20180605/wzl/kisspng-computer-icons-image-file-formats-no-image-5b16ff0d4b81e2.4246835515282337413093.jpg" class="img-responsive" alt="Image">
@@ -28,8 +28,8 @@
   <div class="row">
     <h2 class="text-center">There No Photo Items</h2>
   </div>
-  {% endfor %} -->
-</div>
+  {% endfor %}
+</div> -->
 
 </div>
 
