added the else if to display photo to today-photo.html

--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -16,7 +16,7 @@
       <img src="{{photo_item.image.url}}" class="img-responsive" alt="Image">
       <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
 
-    <!-- </div>
+    </div>
     {% else %}
     <div class="col-md-4">
       <img src="https://banner2.kisspng.com/20180605/wzl/kisspng-computer-icons-image-file-formats-no-image-5b16ff0d4b81e2.4246835515282337413093.jpg" class="img-responsive" alt="Image">
@@ -24,7 +24,7 @@
     {% endif %}
 
 
-  {% empty %}
+  <!-- {% empty %}
   <div class="row">
     <h2 class="text-center">There No Photo Items</h2>
   </div>
