--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -24,12 +24,12 @@
     {% endif %}
 
 
-  <!-- {% empty %}
+  {% empty %}
   <div class="row">
     <h2 class="text-center">There No Photo Items</h2>
   </div>
   {% endfor %}
-</div> -->
+</div>
 
 </div>
 
