added the past-photo.html file

--- a/photo/templates/all-photos/past-photo.html
+++ b/photo/templates/all-photos/past-photo.html
@@ -1,5 +1,5 @@
-<!-- {%extends 'all-photos/base.html'%}
+{%extends 'all-photos/base.html'%}
 {% block content %}
 {{block.super}}
 
-{% endblock %} -->
+{% endblock %}
