added the search.html file

--- a/photo/templates/all-photos/search.html
+++ b/photo/templates/all-photos/search.html
@@ -1,6 +1,6 @@
-<!-- {%extends 'all-photos/base.html'%}
+{%extends 'all-photos/base.html'%}
 
-{% block content %}
+<!-- {% block content %}
 <div class="container">
 
   <div class="row">
@@ -22,5 +22,5 @@
     {% endfor %}
   {% endif %}
   </div>
-</div>
-{% endblock %} -->
+</div> -->
+{% endblock %}
