--- a/photo/templates/all-photos/search.html
+++ b/photo/templates/all-photos/search.html
@@ -1,6 +1,6 @@
 {%extends 'all-photos/base.html'%}
 
-<!-- {% block content %}
+{% block content %}
 <div class="container">
 
   <div class="row">
@@ -9,7 +9,7 @@
     {% else %}
       <h2> Found 0 images for the search term {{message}}</h2>
     {% endif %}
-
+<!--
   </div>
 
   <div class="row">
