--- a/photo/templates/all-photos/search.html
+++ b/photo/templates/all-photos/search.html
@@ -9,7 +9,7 @@
     {% else %}
       <h2> Found 0 images for the search term {{message}}</h2>
     {% endif %}
-<!--
+
   </div>
 
   <div class="row">
@@ -22,5 +22,5 @@
     {% endfor %}
   {% endif %}
   </div>
-</div> -->
+</div>
 {% endblock %}
