added the image.html file to display one photo and its information

--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -1,6 +1,6 @@
-<!-- {%extends 'all-photos/base.html'%}
+{%extends 'all-photos/base.html'%}
 
- {% block content %}
+ <!-- {% block content %}
  <div class="container">
    <div class="row">
      <h1 class="text-center">{{image.image_name}}</h1>
@@ -41,6 +41,6 @@
      <footer class="text-center">Posted ({{image.photo_date|timesince}}) by ({{image.photography.first_name}})</footer>
 
 
- </div>
+ </div> -->
 
- {% endblock %} -->
+ {% endblock %}
