--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -1,13 +1,13 @@
 {%extends 'all-photos/base.html'%}
 
- <!-- {% block content %}
+ {% block content %}
  <div class="container">
    <div class="row">
      <h1 class="text-center">{{image.image_name}}</h1>
    </div>
    <hr>
 
-   <div class="row">
+   <!-- <div class="row">
      <div class="col-md-5">
      </div>
      <div class="col-md-2">
