--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -7,7 +7,7 @@
    </div>
    <hr>
 
-   <!-- <div class="row">
+   <div class="row">
      <div class="col-md-5">
      </div>
      <div class="col-md-2">
@@ -19,7 +19,7 @@
 <br>
 <br>
 
-
+<!-- 
    <div class="row">
      <div class="col-md-2">
      </div>
