adde font style to display image_description  image.html file

--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -19,7 +19,7 @@
 <br>
 <br>
 
-<!-- 
+
    <div class="row">
      <div class="col-md-2">
      </div>
@@ -31,7 +31,7 @@
          font-size: 30px;
        }
        </style>
-       <p class = "image_description">{{image.image_description}}</p>
+       <!-- <p class = "image_description">{{image.image_description}}</p>
      </div>
      <div class="col-md-2">
      </div>
