adde the image_description to image.html file

--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -31,14 +31,14 @@
          font-size: 30px;
        }
        </style>
-       <!-- <p class = "image_description">{{image.image_description}}</p>
+       <p class = "image_description">{{image.image_description}}</p>
      </div>
      <div class="col-md-2">
      </div>
    </div>
 
 
-     <footer class="text-center">Posted ({{image.photo_date|timesince}}) by ({{image.photography.first_name}})</footer>
+     <!-- <footer class="text-center">Posted ({{image.photo_date|timesince}}) by ({{image.photography.first_name}})</footer>
 
 
  </div> -->
