adde the footer to display time since postedto image.html file

--- a/photo/templates/all-photos/image.html
+++ b/photo/templates/all-photos/image.html
@@ -38,9 +38,9 @@
    </div>
 
 
-     <!-- <footer class="text-center">Posted ({{image.photo_date|timesince}}) by ({{image.photography.first_name}})</footer>
+     <footer class="text-center">Posted ({{image.photo_date|timesince}}) by ({{image.photography.first_name}})</footer>
 
 
- </div> -->
+ </div>
 
  {% endblock %}
