adde the navbar.html file

--- a/photo/templates/navbar.html
+++ b/photo/templates/navbar.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -11,7 +11,7 @@
     <div class="navbar-header">
       <ul>
         <a class="navbar-brand" href="{% url 'photoToday' %}">Personal Gallery</a>
-        <a class="navbar-brand" href="/admin"> Admin</a>
+        <!-- <a class="navbar-brand" href="/admin"> Admin</a>
       </ul>
 
     </div>
@@ -27,10 +27,10 @@
           </div>
         </div>
 
-      </form>
+      </form> -->
     </div>
 
   </div>
 </nav>
 </body>
-</html> -->
+</html>
