--- a/photo/templates/navbar.html
+++ b/photo/templates/navbar.html
@@ -11,7 +11,7 @@
     <div class="navbar-header">
       <ul>
         <a class="navbar-brand" href="{% url 'photoToday' %}">Personal Gallery</a>
-        <!-- <a class="navbar-brand" href="/admin"> Admin</a> -->
+        <a class="navbar-brand" href="/admin"> Admin</a>
       </ul>
 
     </div>
