--- a/photo/templates/all-photos/search.html
+++ b/photo/templates/all-photos/search.html
@@ -18,6 +18,7 @@
     {% for image in images %}
       <div class="col-sm-6 col-md-3">
           <h1>{{image.image_name}}</h1>
+          <img src="{{image.image.url}}" class="img-responsive" alt="Image">
       </div>
     {% endfor %}
   {% endif %}
