--- a/photo/templates/all-photos/today-photo.html
+++ b/photo/templates/all-photos/today-photo.html
@@ -13,8 +13,8 @@
 
     {% if photo_item.image %}
     <div class="col-md-4">
-      <img src="{{photo_item.image.url}}" class="img-responsive" alt="Image">
-      <h4 class = "text-center" style="color:green;"> <a href="{% url 'image' photo_item.id %}"> {{photo_item.image_name}} </a></h4>
+      <a href="{% url 'image' photo_item.id %}"><img src="{{photo_item.image.url}}" class="img-responsive" alt="Image"></a>
+      <h4 class = "text-center" style="color:black;">  {{photo_item.image_name}} </h4>
 
     </div>
     {% else %}
@@ -30,6 +30,8 @@
   </div>
   {% endfor %}
 </div>
+
+
 
 </div>
 
